--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -12,3 +12,14 @@ code {
     monospace;
   margin-right: 5px;
 }
+
+a.link:visited {
+  color: white;
+}
+
+a:hover,
+a:visited,
+a:link,
+a:active {
+  text-decoration: none;
+}
